k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firstmate
  labels:
    istio-injection: "disabled"
    app.kubernetes.io/name: firstmate
    kubernetes.io/metadata.name: firstmate
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
